--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -18,9 +18,17 @@ body {
 
 button {
   font-family: "Nunito", sans-serif;
+  font-size: .9rem;
+  border: none;
+  border-radius: 3px;
+  padding: 8px;
+  background-color: aqua;
+  color: rgb(25, 46, 46);
+  cursor: pointer;
 }
 
-input, textarea {
+input,
+textarea {
   background-color: #343a40;
   color: #ababab;
   border: 1px solid #2e3238;
@@ -71,6 +79,7 @@ textarea {
   .add-task-button {
     width: 30px;
     font-size: 1.3rem;
+    padding: 0;
     border: none;
     border-radius: 50%;
     background-color: aqua;
@@ -103,7 +112,7 @@ textarea {
     top: 0;
     right: -100%;
     opacity: 0;
-    transition: opacity, right 0.2s, 0.2s ease-out;
+    transition: opacity, right 0.3s, 0.2s ease-in-out;
   }
 
   .task-menu-expanded {
