--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -18,7 +18,7 @@ body {
 
 button {
   font-family: "Nunito", sans-serif;
-  font-size: .9rem;
+  font-size: 0.9rem;
   border: none;
   border-radius: 3px;
   padding: 8px;
@@ -123,7 +123,7 @@ textarea {
 
   .task-description {
     color: #9e9b9b;
-    font-size: .8rem;
+    font-size: 0.8rem;
   }
 
   .task-menu-expanded {
@@ -137,10 +137,27 @@ textarea {
     border-radius: 50%;
     aspect-ratio: 1;
     cursor: pointer;
+    position: relative;
+    overflow: hidden;
+  }
+
+  .task-done-icon {
+    img {
+      position: absolute;
+      width: 60%;
+      left: 50%;
+      top: 50%;
+      transform: translate(80%, -50%);
+      transition: transform .1s ease-out;
+      opacity: .6;
+    }
   }
 
   .task-done-icon-checked {
     background-color: aqua;
+    img {
+      transform: translate(-50%, -50%);
+    }
   }
 }
 
