--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -51,7 +51,7 @@ textarea {
   max-width: 600px;
   height: 90vh;
   margin: 5vh auto;
-  padding: 2%;
+  padding: 40px;
   background-color: #3c424a;
   border-radius: 3px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px,
@@ -172,4 +172,12 @@ textarea {
   cursor: pointer;
   width: 15px;
   align-self: flex-end;
+}
+
+@media (max-width: 700px) {
+  .container {
+    max-width: 100%;
+    height: 100vh;
+    margin: 0;
+  }
 }
